# aide

./: .env-api  .env-mock  .gitignore  .prettierrc.json  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-Apache  LICENSE.md  README.md  TODO.md  app.vue  content.config.ts  docker-compose.yaml  eslint.config.mjs  i18n.config.ts  index.d.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
.argocd/chart/: Chart.yaml
.github/workflows/: pr-check.yaml  prod.yaml  release.yaml  rust.yml  staging.yaml  typos.yml
.stories/: ButtonComponent.stories.ts  TextChip.stories.ts
.storybook/: main.ts
.zed/: settings.json
aide/: Cargo.toml
aide-macros/: Cargo.toml
aide-macros/src/: lib.rs
aide-macros/src/openapi_v3/: mod.rs  tag.rs
aide-macros/src/openapi_v3/model/: mod.rs
aide-macros/src/openapi_v3/operation/: binding.rs  mod.rs  param.rs  response.rs
aide-macros/src/util/: attr.rs  examples.rs  mod.rs  parsing.rs
aide/assets/redoc/: redoc.standalone.js
aide/examples/: actix.rs
aide/src/: lib.rs  openapi.rs
aide/src/openapi/v3/: definition.rs  definition_ext.rs  macros.rs  mod.rs  transform.rs  ui.rs
aide/templates/: redoc.html
app/: app.vue
app/components/: AppFooter.vue  AppHead.vue  AppHeader.vue  AppNotificationToastContainer.vue  AppPage.vue  AppUserInteractionModal.vue  ButtonShare.vue  CarouselHero.vue  DashboardSection.vue  DashboardSectionItem.vue  FooterColumn.vue  FooterColumnSocialMedia.vue  GameDescription.vue  GameDescriptionCard.vue  GameFrame.vue  GameFrameBackdrop.vue  GameFrameDesktop.vue  GameFrameIframe.vue  GameFrameMobile.vue  GameFrameVotes.vue  GridCategory.vue  GridScroller.vue  ImageRatio.vue  InfoWithdrawalLimits.vue  LiveChat.vue  LiveChatButton.vue  LoadItemsWrapper.vue  LocaleSelect.vue  NavBar.vue  NavDashboard.vue  NavMobile.vue  NavSidebar.vue  NavSidebarLink.vue  NavSidebarLinkGroup.vue  NavUser.vue  NavWalletBalance.vue  PromoBar.vue  ProviderImageLoader.vue  QRCode.vue  ScrollOffscreen.vue  (+11 more)
app/composables/: addKeyFromId.ts  addKeyFromIdentifier.ts  casinoApiOrigin.ts  countryName.ts  useLogger.ts  (+18 more)
components/: AppFooter.vue  AppHeader.vue  AppPage.vue  AuthModal.vue  Button.spec.ts  Button.vue  Carousel.vue  CarouselHero.vue  CategoryGrid.vue  CategorySlider.vue  ComponentsTest.vue  Footer.vue  FormControl.vue  GameCategory.vue  GameFrame.vue  GameFrameMobile.vue  GameWinner.vue  GlobalSearchBar.vue  GridPage.vue  GridScroller.vue  Header.vue  HeaderMobile.vue  HeroSectionSlider.vue  HomeWinningNow.vue  Input.vue  InputWrapper.vue  MainHeader.vue  MenuMobile.vue  MobileMenuBar.vue  Modal.vue  NavMobile.vue  NavSidebar.vue  NavSidebarLink.vue  NavSidebarLinkGroup.vue  PageFooter.vue  PageHeader.vue  PromoBar.vue  ProviderCategory.vue  Search.vue  Select.vue  (+10 more)
composables/: useAuth.ts  useBalance.ts  useGameCategories.ts  useGames.ts
constants/: index.ts
crates/aide/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
crates/aide-axum-sqlx-tx/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/aide-axum-sqlx-tx/src/: lib.rs
crates/aide-axum-typed-multipart/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/aide-axum-typed-multipart/src/: lib.rs
crates/aide-macros/: Cargo.toml
crates/aide-macros/src/: lib.rs
crates/aide-swagger-ui/: Cargo.toml  README.md  cliff.toml
crates/aide/res/scalar/: rust-theme.css  scalar.standalone.min.js
crates/aide/res/swagger/: update.sh
crates/aide/src/: error.rs  gen.rs  generate.rs  lib.rs  operation.rs  transform.rs  util.rs
crates/aide/src/axum/: inputs.rs  mod.rs  outputs.rs  routing.rs
crates/aide/src/axum/routing/: mod.rs  typed.rs
crates/aide/src/axum_typed_multipart/: mod.rs
crates/aide/src/helpers/: mod.rs  no_api.rs  use_api.rs  with_api.rs
crates/aide/src/impls/: bytes.rs  http.rs  mod.rs  serde_qs.rs
crates/aide/src/openapi/: callback.rs  components.rs  contact.rs  discriminator.rs  encoding.rs  example.rs  external_documentation.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  openapi.rs  operation.rs  parameter.rs  paths.rs  reference.rs  request_body.rs  responses.rs  schema.rs  security_requirement.rs  security_scheme.rs  server.rs  server_variable.rs  status_code.rs  tag.rs  variant_or.rs
crates/aide/src/redoc/: mod.rs
crates/aide/src/scalar/: mod.rs
crates/aide/src/swagger/: mod.rs
crates/aide/src/swagger_ui/: mod.rs
crates/aide/tests/: test_op_out_derive.rs
crates/axum-jsonschema/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/axum-jsonschema/src/: lib.rs
crates/axum-jsonschema/src/extract/: form.rs  json.rs  mod.rs  path.rs  query.rs
examples/example-axum/: Cargo.toml  README.md
examples/example-axum-multipart/: Cargo.toml
examples/example-axum-multipart/src/: main.rs  multipart.rs
examples/example-axum-worker/: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
examples/example-axum-worker/src/: docs.rs  errors.rs  extractors.rs  lib.rs  state.rs
examples/example-axum-worker/src/todos/: mod.rs
examples/example-axum/src/: README.md  docs.rs  extractors.rs  main.rs
examples/example-axum/src/todos/: routes.rs
helm/: .helmignore  Chart.yaml  README.md  values.yaml  values_girobet.yaml  values_zambabet.yaml  zambabet.yaml
layouts/: account.vue  default.vue
locales/: en.json  pt.json
middleware/: auth.global.ts  auth.ts
pages/: account.vue  affiliate-program.vue  aml-kyc.vue  aml-policy.vue  betting-terms.vue  faq.vue  index.vue  privacy.vue  responsible-gaming.vue  support.vue  terms.vue
plugins/: maska.ts
public/: _robots.txt
store/: authorization.js  globalTriggers.js  globalTriggers.ts  notifications.ts
stories/: ButtonComponent.stories.ts  GlobalSearchBar.stories.ts  HeroSectionSlider.stories.ts  TextChip.stories.ts
types/: api.d.ts  auth.d.ts  category.d.ts  constants.d.ts  game.d.ts  inputField.d.ts  notification.d.ts  options.d.ts  user.d.ts  utils.d.ts
utils/: index.ts  types.d.ts
(+749 files in other folders)
