[package]
name = "aide"
version = "0.2.0"
authors = ["tamasfe"]
edition = "2018"
keywords = ["api", "spec", "specification"]
license = "MIT"
repository = "https://github.com/tamasfe/aide"
description = "An API documentation library"

[dependencies]
aide-macros = { path = "../aide-macros", version = "=0.2.0" }
linkme = "0.2.7"
schemars = { version = "0.8.6", features = ["impl_json_schema"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
actix-web = "4.0.0-beta.10"
anyhow = "1"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["openapi-v3"]

openapi-v3 = []

indexmap = ["schemars/indexmap"]
uuid = ["schemars/uuid"]
smallvec = ["schemars/smallvec"]
arrayvec = ["schemars/arrayvec"]

[[example]]
name = "actix"
required-features = [ "openapi-v3"]
