[package]
name = "aide-axum-sqlx-tx"
version = "0.11.0"
edition = "2021"
resolver = "2"

[dependencies]
sqlx-06 = { package = "axum-sqlx-tx", version = "0.5.0", optional = true }
sqlx-07 = { package = "axum-sqlx-tx", version = "0.6.0", optional = true }
aide = { version = "0.11.0", path = "../aide" }

[dev-dependencies]
sqlx = { version = "0.7", features = ["macros", "postgres"] }

[package.metadata.docs.rs]
features = ["sqlx-07", "postgres"]

[features]
default = ["sqlx-07"]
sqlx-07 = ["dep:sqlx-07"]
sqlx-06 = ["dep:sqlx-06"]

any = ["sqlx-07?/any", "sqlx-06?/any"]
mysql = ["sqlx-07?/mysql", "sqlx-06?/mysql"]
postgres = ["sqlx-07?/postgres", "sqlx-06?/postgres"]

runtime-tokio-native-tls = ["sqlx-07?/runtime-tokio-native-tls", "sqlx-06?/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx-07?/runtime-tokio-rustls", "sqlx-06?/runtime-tokio-rustls"]