[package]
name = "aide-axum-sqlx-tx"
version = "0.13.0"
edition = "2021"
resolver = "2"
authors = ["Wicpar"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "axum-sqlx-tx for aide"
readme = "README.md"

[dependencies]
sqlx-06 = { package = "axum-sqlx-tx", version = "0.5.0", optional = true }
sqlx-07 = { package = "axum-sqlx-tx", version = "0.6.0", optional = true }
aide = { version = "0.13", path = "../aide" }

[dev-dependencies]
sqlx = { version = "^0.7", features = ["postgres"] }
sqlx-07 = { package = "axum-sqlx-tx", version = "0.6.0", features = ["postgres"] }

[features]
default = ["sqlx-07"]
sqlx-07 = ["dep:sqlx-07"]
sqlx-06 = ["dep:sqlx-06"]

any = ["sqlx-07?/any", "sqlx-06?/any"]
mysql = ["sqlx-07?/mysql", "sqlx-06?/mysql"]
postgres = ["sqlx-07?/postgres", "sqlx-06?/postgres"]

runtime-tokio-native-tls = ["sqlx-07?/runtime-tokio-native-tls", "sqlx-06?/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx-07?/runtime-tokio-rustls", "sqlx-06?/runtime-tokio-rustls"]