[package]
name = "aide-axum-sqlx-tx"
version = "0.13.1"
edition = "2021"
resolver = "2"
authors = ["Wicpar"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "axum-sqlx-tx for aide"
readme = "README.md"

[dependencies]
axum-sqlx-tx-06 = { package = "axum-sqlx-tx", version = "0.6.0", optional = true }
axum-sqlx-tx-07 = { package = "axum-sqlx-tx", version = "0.7.0", optional = true }
axum-sqlx-tx-08 = { package = "axum-sqlx-tx", version = "0.8.0", optional = true }
axum-sqlx-tx-09 = { package = "axum-sqlx-tx", version = "0.9.0", optional = true }
aide = { version = "0.13", path = "../aide" }

[dev-dependencies]
sqlx = { version = "0.8.1", features = ["postgres"], default-features = false}

[features]
default = ["axum-sqlx-tx-09"]
axum-sqlx-tx-09 = ["dep:axum-sqlx-tx-09"]
axum-sqlx-tx-08 = ["dep:axum-sqlx-tx-08"]
axum-sqlx-tx-07 = ["dep:axum-sqlx-tx-07"]
axum-sqlx-tx-06 = ["dep:axum-sqlx-tx-06"]

any = ["axum-sqlx-tx-08?/any", "axum-sqlx-tx-07?/any", "axum-sqlx-tx-06?/any"]
mysql = ["axum-sqlx-tx-08?/mysql", "axum-sqlx-tx-07?/mysql", "axum-sqlx-tx-06?/mysql"]
postgres = ["axum-sqlx-tx-08?/postgres", "axum-sqlx-tx-07?/postgres", "axum-sqlx-tx-06?/postgres"]

runtime-tokio-native-tls = ["axum-sqlx-tx-08?/runtime-tokio-native-tls", "axum-sqlx-tx-07?/runtime-tokio-native-tls", "axum-sqlx-tx-06?/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["axum-sqlx-tx-08?/runtime-tokio-native-tls", "axum-sqlx-tx-07?/runtime-tokio-rustls", "axum-sqlx-tx-06?/runtime-tokio-rustls"]
