[package]
name = "aide-axum-typed-multipart"
version = "0.13.0"
edition = "2021"
authors = ["emonadeo"]
keywords = ["web", "axum", "multipart"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Type safe multipart/form-data handling for axum and aide"
readme = "README.md"

[dependencies]
aide = { version = "0.13", path = "../aide" }
axum = "0.7.5"
axum_typed_multipart = { version = "0.12.1" }
indexmap = "2.4.0"
schemars = "0.8.21"

[dev-dependencies]
bytes = "1.7.1"
schemars = { version = "0.8.21" , features = ["bytes"]}
