[package]
name = "aide-axum-typed-multipart"
version = "0.14.0"
edition = "2021"
authors = ["emonadeo"]
keywords = ["web", "axum", "multipart"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Type safe multipart/form-data handling for axum and aide"
readme = "README.md"

[dependencies]
aide = { version = "0.14", path = "../aide" }
axum = "0.8.1"
axum_typed_multipart = { version = "0.15.1" }
indexmap = "2.2.2"
schemars = "0.8.16"
async-trait = "0.1.85"

[dev-dependencies]
bytes = "1.5.0"
schemars = { version = "0.8.16" , features = ["bytes"]}
