[package]
name = "aide"
version = "0.11.0"
authors = ["tamasfe"]
edition = "2021"
keywords = ["generate", "api", "openapi", "documentation", "specification"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tamasfe/aide"
description = "A code-first API documentation library"

[dependencies]
indexmap = { version = "1", features = ["serde"] }
schemars = { version = "0.8", features = ["impl_json_schema", "indexmap"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0"
aide-macros = { version = "0.7.0", path = "../aide-macros", optional = true }
derive_more = "0.99.17"

bytes = { version = "1", optional = true }
http = { version = "0.2", optional = true }

axum = { version = "0.6.0", optional = true }
axum-extra = { version = "0.7.3", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
cfg-if = "1.0.0"


# custom axum extractors
serde_qs = { version = "0.12.0", optional = true }
jwt-authorizer = { version = "0.10", default-features = false, optional = true }

[features]
macros = ["dep:aide-macros"]
redoc = []
skip_serializing_defaults = []

axum = ["dep:axum", "bytes", "http", "dep:tower-layer", "dep:tower-service", "serde_qs?/axum"]
axum-headers = ["axum/headers"]
axum-ws = ["axum/ws"]
axum-multipart = ["axum/multipart"]
axum-extra = ["axum", "dep:axum-extra"]
axum-extra-cookie = ["axum", "axum-extra", "axum-extra/cookie"]
axum-extra-cookie-private = ["axum", "axum-extra", "axum-extra/cookie-private"]
axum-extra-form = ["axum", "axum-extra", "axum-extra/form"]
axum-extra-query = ["axum", "axum-extra", "axum-extra/query"]


serde_qs = ["dep:serde_qs"]
jwt-authorizer = ["dep:jwt-authorizer"]

[dev-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
