[package]
name = "aide"
version = "0.13.4"
authors = ["tamasfe"]
edition = "2021"
keywords = ["generate", "api", "openapi", "documentation", "specification"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tamasfe/aide"
description = "A code-first API documentation library"
readme = "README.md"

[dependencies]
indexmap = { version = "2.4", features = ["serde"] }
schemars = { version = "0.8.21", features = ["impl_json_schema", "indexmap2"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0"
aide-macros = { version = "0.7.0", path = "../aide-macros", optional = true }

bytes = { version = "1", optional = true }
http = { version = "1.1.0", optional = true }

axum = { version = "0.7.5", optional = true, default-features = false }
axum-extra = { version = "0.9.3", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
cfg-if = "1.0.0"


# custom axum extractors
serde_qs = { version = "0.13", optional = true }
jwt-authorizer = { version = "0.14", default-features = false, optional = true }

[features]
macros = ["dep:aide-macros"]
redoc = []
scalar = []
skip_serializing_defaults = []

axum = ["dep:axum", "bytes", "http", "dep:tower-layer", "dep:tower-service", "serde_qs?/axum"]
axum-headers = ["axum-extra/typed-header"]
axum-ws = ["axum/ws"]
axum-multipart = ["axum/multipart"]
axum-extra = ["axum", "dep:axum-extra"]
axum-extra-cookie = ["axum", "axum-extra", "axum-extra/cookie"]
axum-extra-cookie-private = ["axum", "axum-extra", "axum-extra/cookie-private"]
axum-extra-form = ["axum", "axum-extra", "axum-extra/form"]
axum-extra-query = ["axum", "axum-extra", "axum-extra/query"]
axum-wasm = ["axum"]


serde_qs = ["dep:serde_qs"]
jwt-authorizer = ["dep:jwt-authorizer"]

[dev-dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
