[package]
name = "aide"
version = "0.15.1"
authors = ["tamasfe"]
edition = "2021"
keywords = ["generate", "api", "openapi", "documentation", "specification"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tamasfe/aide"
description = "A code-first API documentation library"
readme = "README.md"

[dependencies]
indexmap = { version = "2.1", features = ["serde"] }
schemars = { version = "0.9.0", features = ["indexmap2"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
aide-macros = { version = "=0.15.0", path = "../aide-macros", optional = true }

bytes = { version = "1", optional = true }
http = { version = "1.0.0", optional = true }
serde_qs = { version = "0.14", optional = true }

axum = { version = "0.8.1", optional = true, default-features = false }
axum-extra = { version = "0.10", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
cfg-if = "1.0.0"

[features]
macros = ["dep:aide-macros"]
redoc = []
swagger = []
scalar = []
skip_serializing_defaults = []
serde_qs = ["dep:serde_qs"]

axum = ["dep:axum", "bytes", "http", "dep:tower-layer", "dep:tower-service", "serde_qs?/axum"]
axum-form = ["axum", "axum/form"]
axum-json = ["axum", "axum/json"]
axum-matched-path = ["axum", "axum/matched-path"]
axum-multipart = ["axum", "axum/multipart"]
axum-original-uri = ["axum", "axum/original-uri"]
axum-query = ["axum", "axum/query"]
axum-tokio = ["axum", "axum/tokio"]
axum-ws = ["axum", "axum/ws"]

axum-extra = ["axum", "dep:axum-extra"]
axum-extra-cookie = ["axum-extra", "axum-extra/cookie"]
axum-extra-cookie-private = ["axum-extra", "axum-extra/cookie-private"]
axum-extra-form = ["axum-extra", "axum-extra/form"]
axum-extra-headers = ["axum-extra/typed-header"]
axum-extra-query = ["axum-extra", "axum-extra/query"]
axum-extra-json-deserializer = ["axum-extra", "axum-extra/json-deserializer"]
axum-extra-typed-routing = [
    "axum-extra",
    "axum-extra/typed-routing",
    "aide-macros?/axum-extra-typed-routing",
]

[dev-dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
