[package]
name = "axum-jsonschema"
version = "0.5.0"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { version = "0.10.0", path = "../aide", optional = true, features = [
    "axum",
] }
async-trait = "0.1.57"
axum = { version = "0.6.0", default-features = false, features = ["json"] }
http = "0.2.8"
http-body = "0.4.5"
itertools = "0.10.5"
jsonschema = { version = "0.16.0", default-features = false }
schemars = { version = "0.8.10", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
tracing = "0.1.36"
