[package]
name = "axum-jsonschema"
version = "0.8.0"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { version = "0.13.0", path = "../aide", optional = true, features = [
    "axum",
] }
async-trait = "0.1.57"
axum = { version = "0.7.1", default-features = false, features = ["json"] }
http = "1.0.0"
http-body = "1.0.0"
itertools = "0.12.0"
jsonschema = { version = "0.17.0", default-features = false }
schemars = { version = "0.8.10", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
tracing = "0.1.36"
