[package]
name = "axum-jsonschema"
version = "0.8.0"
edition = "2021"
authors = ["tamasfe"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/tamasfe/aide"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { version = "0.13", path = "../aide", optional = true, features = [
    "axum",
] }
async-trait = "0.1.81"
axum = { version = "0.7.5", default-features = false, features = ["json"] }
http = "1.1.0"
http-body = "1.0.1"
itertools = "0.13.0"
jsonschema = { version = "0.18.1", default-features = false }
schemars = { version = "0.8.21", default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_path_to_error = "0.1.16"
tracing = "0.1.40"
