[package]
name = "example-axum-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
    "axum-wasm"
] }
tower-service = "0.3.3"
async-trait = "0.1.81"
worker = { version = "0.3.4", features = ["http", "axum"] }
console_error_panic_hook = "0.1.7"
axum = { version = "0.7.5", default-features = false, features = ["macros", "form", "matched-path", "query", "original-uri"] }
axum-extra = "0.9.3"
axum-jsonschema = { path = "../../crates/axum-jsonschema", features = [
    "aide",
] }
axum-macros = "0.4.1"
schemars = { version = "0.8.21", features = ["uuid1"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
