[package]
name = "example-axum-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
    "axum-wasm"
] }
tower-service = "0.3.2"
worker = { version = "0.5.0", features = ["http", "axum"] }
console_error_panic_hook = "0.1.7"
axum = { version = "0.8.1", default-features = false, features = ["macros", "form", "matched-path", "query", "original-uri"] }
axum-jsonschema = { path = "../../crates/axum-jsonschema", features = ["aide"] }
axum-macros = "0.5.0"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
