[package]
name = "example-axum-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "scalar",
    "swagger",
    "axum-json",
    "macros",
] }
tower-service = "0.3.2"
worker = { version = "0.5.0", features = ["http", "axum"] }
console_error_panic_hook = "0.1.7"
axum = { version = "0.8.1", default-features = false, features = ["macros", "form", "matched-path", "query", "original-uri"] }
schemars = { version = "0.9.0", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
