[package]
name = "example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = "0.9.3"
axum-jsonschema = { path = "../../crates/axum-jsonschema", features = [
    "aide",
] }
axum-macros = "0.4.1"
schemars = { version = "0.8.21", features = ["uuid1"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
