[package]
name = "example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "macros",
] }
axum = { version = "0.8.1", features = ["macros"] }
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
